--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "komiks-page",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kcpru.github.io/komiks",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
